fix: added the jump

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -432,3 +432,8 @@ color: white !important;
   }
   
  }
+
+
+ .font-vina{
+  font-family: 'Vina Sans', sans-serif;
+ }
